[Fix] 2020년 게시물 오타 수정
2020년 게시물을 2019년 게시물로 작성하여 파일명 수정.

--- a/_posts/2020-01-01-https.md
+++ b/_posts/2020-01-01-https.md
@@ -3,6 +3,13 @@ title: "Https?"
 date: 2020-01-01 08:26:28 -0400
 categories: Https
 ---
+
+## Http?
+
+Https에대해서 논의하기 이전에 Http부터 알아보자.
+
+
+
 [Https 위키](https://ko.wikipedia.org/wiki/HTTPS)
 
 HTTPS(HyperText Transfer Protocol over Secure Socket Layer, HTTP over TLS,[1][2] HTTP over SSL,[3] HTTP Secure[4][5])는 월드 와이드 웹 통신 프로토콜인 HTTP의 보안이 강화된 버전이다. HTTPS는 통신의 인증과 암호화를 위해 넷스케이프 커뮤니케이션즈 코퍼레이션이 개발했으며, 전자 상거래에서 널리 쓰인다.
